# cqed_based_studies

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AUTO_RESEARCH_USAGE.md  Auto_Agent_Study.bat  Auto_Research_Prompt.md  LESSONS_LEARNED.md  README.md  RERUN_SUMMARY.md  RESEARCH_LOOP.md  agentic_research_workflow.md  agentic_research_workflow_zh.md  pyproject.toml  requirements.txt  research_config.json  tmp_auto_workflow_prompt.md
.github/: copilot-instructions.md
.github/agents/: autonomous-implementer.agent.md  autonomous-planner.agent.md  autonomous-resume.agent.md  execution-engineer.agent.md  research-loop.agent.md  science-director.agent.md
.github/instructions/: improvements-log.instructions.md  latex-report.instructions.md  python-study-code.instructions.md  study-readme.instructions.md  task-run-state.instructions.md
.github/prompts/: autonomous-implement.prompt.md  autonomous-plan.prompt.md  autonomous-resume.prompt.md  execute-study.prompt.md  pre-study-checklist.prompt.md  research-loop.prompt.md  review-study.prompt.md
schemas/: study_state.schema.json
studies/auto_workflow_probe/: IMPROVEMENTS.md  README.md  study_state.json
studies/cluster_state_free_evolution_snap_comparison/: IMPROVEMENTS.md  README.md
studies/cluster_state_holographic_sim/: IMPROVEMENTS.md  README.md  study_state.json
studies/cluster_state_holographic_unified/: IMPROVEMENTS.md  README.md  study_state.json
tools/: agent_live_view.ps1  auto_agent_study.ps1  auto_loop.ps1  copilot_task_run.ps1  research_loop.ps1  review_watch.bat  test_params.ps1  validate_study.ps1
(+3978 files in other folders)
